added git ignore

--- a/UI/index.html
+++ b/UI/index.html
@@ -6,7 +6,10 @@
 </head>
 
 <body class="main">
-    hello world
+    <header class="topbar"></header>
+    <aside class="sidebar"></aside>
+    <main class="content"></main>
+    <footer class="footer"></footer>
 </body>
 <script src="./assets/js/app.js" type="text/javascript"></script>
 
