feature(user can see signin page): complete

--- a/UI/index.html
+++ b/UI/index.html
@@ -83,6 +83,19 @@ income earners.
                 </div>
 
             </div>
+        <div  class=" page hidden" data-path="/login" data-handler="login">
+            <div class="row justify-content-space-around flex-1">
+                <div class="form">
+                    <form id="login_form" method="post" action="#/login" name="login" class=" card column justify-content-space-around flex-1">
+                        <div class="row justify-content-center"> <h3 >Login</h3></div>
+                        <input type="email" required class="input" name="email" placeholder="Email">
+                        <input type="password" required class="input" name="password" placeholder="Password">
+                        <input type="submit" class="submit" name="login" value="Login">
+                        <a href="#/signup" class="footnote_link">I don`t have an account?</a>
+                    </form>
+                </div>
+            </div>
+        </div>
         <div  class=" page hidden" data-path="/signup" data-handler="signup">
             <div class="row justify-content-space-around flex-1">
                 <div class="form">
