--- a/UI/index.html
+++ b/UI/index.html
@@ -114,6 +114,23 @@ income earners.
         </div>
 
 
+
+        <div  class=" page hidden" data-path="/apply" data-handler="apply">
+            <div class="row justify-content-space-around flex-1">
+                <div class="form">
+                    <form action="#" name="apply" class=" card column justify-content-space-around flex-1">
+                        <div class="row justify-content-center"> <h3 >Apply for Loan</h3></div>
+                        <input type="number" min="1" step="0.5" required class="input" name="amount" placeholder="Amount in USD">
+                        <input type="number" min="1" step="1" max="12" required class="input" name="password" placeholder="Tenure in months">
+                        <div class="row justify-content-center">
+                            <div>Monthly repayment: </div><div>5000 USD</div>
+                        </div>
+                        <input type="submit" class="submit" name="apply" value="Apply">
+                    </form>
+                </div>
+            </div>
+        </div>
+
     </main>
 </main>
 <footer class="footer">
