feature(user can see loan repayment page): complete

--- a/UI/index.html
+++ b/UI/index.html
@@ -130,6 +130,91 @@ income earners.
                 </div>
             </div>
         </div>
+        <div  class="card page hidden" data-path="/history" data-handler="history">
+            <div class="column justify-content-center">
+                <div class="row justify-content-center">
+                    <h4>Repayment history</h4>
+                </div>
+                <div class="row justify-content-space-between list_row">
+                    <div class="flex-1"><h5>Id</h5></div>
+                    <div class="flex-2"><h5>Created</h5></div>
+                    <div class="flex-2"><h5>Monthly installment(USD)</h5></div>
+                    <div class="flex-2"><h5>Amount(USD)</h5></div>
+                </div>
+                <div class="list ">
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">1/4/1990</div>
+                        <div class="flex-2">2400</div>
+                        <div class="flex-2">1670</div>
+                    </div><div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-2">1/4/1990</div>
+                    <div class="flex-2">2400</div>
+                    <div class="flex-2">1670</div>
+                </div><div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-2">1/4/1990</div>
+                    <div class="flex-2">2400</div>
+                    <div class="flex-2">1670</div>
+                </div><div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-2">1/4/1990</div>
+                    <div class="flex-2">2400</div>
+                    <div class="flex-2">1670</div>
+                </div><div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-2">1/4/1990</div>
+                    <div class="flex-2">2400</div>
+                    <div class="flex-2">1670</div>
+                </div><div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-2">1/4/1990</div>
+                    <div class="flex-2">2400</div>
+                    <div class="flex-2">1670</div>
+                </div><div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-2">1/4/1990</div>
+                    <div class="flex-2">2400</div>
+                    <div class="flex-2">1670</div>
+                </div><div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-2">1/4/1990</div>
+                    <div class="flex-2">2400</div>
+                    <div class="flex-2">1670</div>
+                </div><div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-2">1/4/1990</div>
+                    <div class="flex-2">2400</div>
+                    <div class="flex-2">1670</div>
+                </div><div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-2">1/4/1990</div>
+                    <div class="flex-2">2400</div>
+                    <div class="flex-2">1670</div>
+                </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">1/4/1990</div>
+                        <div class="flex-2">2400</div>
+                        <div class="flex-2">1670</div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">1/4/1990</div>
+                        <div class="flex-2">2400</div>
+                        <div class="flex-2">1670</div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">1/4/1990</div>
+                        <div class="flex-2">2400</div>
+                        <div class="flex-2">1670</div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
     </main>
 </main>
