feature(user can see repayment page): complete

--- a/UI/index.html
+++ b/UI/index.html
@@ -130,6 +130,21 @@ income earners.
                 </div>
             </div>
         </div>
+        <div  class=" page hidden" data-path="/repay" data-handler="repay">
+            <div class="row justify-content-space-around flex-1">
+                <div class="form">
+                    <form action="#" name="apply" class=" card column justify-content-space-around flex-1">
+                        <div class="row justify-content-center"> <h3 >Repay Loan</h3></div>
+                        <div class="row justify-content-center">
+                            <div>Remained amount: </div><div>5000 USD</div>
+                        </div>
+                        <input type="number" min="1" step="0.50" required class="input" name="amount" placeholder="Amount in USD">
+
+                        <input type="submit" class="submit" name="repay" value="Pay">
+                    </form>
+                </div>
+            </div>
+        </div>
         <div  class="card page hidden" data-path="/history" data-handler="history">
             <div class="column justify-content-center">
                 <div class="row justify-content-center">
