feature(admin can see verify user page): complete

--- a/UI/index.html
+++ b/UI/index.html
@@ -231,6 +231,138 @@ income earners.
             </div>
         </div>
 
+
+        <div  class="card page hidden" data-path="/users" data-handler="users">
+            <div class="column justify-content-center">
+                <div class="row justify-content-center">
+                    <h4>Users</h4>
+                </div>
+                <div class="row justify-content-space-between list_row">
+                    <div class="flex-1"><h5>Id</h5></div>
+                    <div class="flex-2"><h5>Email</h5></div>
+                    <div class="flex-2"><h5>Firstname</h5></div>
+                    <div class="flex-2"><h5>Lastname</h5></div>
+                    <div class="flex-2"><h5>Address</h5></div>
+                    <div class="flex-1"><h5>Action</h5></div>
+                </div>
+                <div class="list ">
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">ebundala@gmail.com</div>
+                        <div class="flex-2">Elias</div>
+                        <div class="flex-2">Bundala</div>
+                        <div class="flex-2">Kibaha</div>
+                        <div class="flex-1">
+                            <button onclick="approveUser(1)" class="action_btn">
+                                Approve
+                            </button>
+                        </div>
+                    </div> <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">ebundala@gmail.com</div>
+                        <div class="flex-2">Elias</div>
+                        <div class="flex-2">Bundala</div>
+                        <div class="flex-2">Kibaha</div>
+                        <div class="flex-1">
+                            <button onclick="approveUser(1)" class="action_btn">
+                                Approve
+                            </button>
+                        </div>
+                    </div> <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">ebundala@gmail.com</div>
+                        <div class="flex-2">Elias</div>
+                        <div class="flex-2">Bundala</div>
+                        <div class="flex-2">Kibaha</div>
+                        <div class="flex-1">
+                            <button onclick="approveUser(1)" class="action_btn">
+                                Approve
+                            </button>
+                        </div>
+                    </div> <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">ebundala@gmail.com</div>
+                        <div class="flex-2">Elias</div>
+                        <div class="flex-2">Bundala</div>
+                        <div class="flex-2">Kibaha</div>
+                        <div class="flex-1">
+                            <button onclick="approveUser(1)" class="action_btn">
+                                Approve
+                            </button>
+                        </div>
+                    </div> <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">ebundala@gmail.com</div>
+                        <div class="flex-2">Elias</div>
+                        <div class="flex-2">Bundala</div>
+                        <div class="flex-2">Kibaha</div>
+                        <div class="flex-1">
+                            <button onclick="approveUser(1)" class="action_btn">
+                                Approve
+                            </button>
+                        </div>
+                    </div> <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">ebundala@gmail.com</div>
+                        <div class="flex-2">Elias</div>
+                        <div class="flex-2">Bundala</div>
+                        <div class="flex-2">Kibaha</div>
+                        <div class="flex-1">
+                            <button onclick="approveUser(1)" class="action_btn">
+                                Approve
+                            </button>
+                        </div>
+                    </div> <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">ebundala@gmail.com</div>
+                        <div class="flex-2">Elias</div>
+                        <div class="flex-2">Bundala</div>
+                        <div class="flex-2">Kibaha</div>
+                        <div class="flex-1">
+                            <button onclick="approveUser(1)" class="action_btn">
+                                Approve
+                            </button>
+                        </div>
+                    </div> <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">ebundala@gmail.com</div>
+                        <div class="flex-2">Elias</div>
+                        <div class="flex-2">Bundala</div>
+                        <div class="flex-2">Kibaha</div>
+                        <div class="flex-1">
+                            <button onclick="approveUser(1)" class="action_btn">
+                                Approve
+                            </button>
+                        </div>
+                    </div> <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">ebundala@gmail.com</div>
+                        <div class="flex-2">Elias</div>
+                        <div class="flex-2">Bundala</div>
+                        <div class="flex-2">Kibaha</div>
+                        <div class="flex-1">
+                            <button onclick="approveUser(1)" class="action_btn">
+                                Approve
+                            </button>
+                        </div>
+                    </div> <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-2">ebundala@gmail.com</div>
+                        <div class="flex-2">Elias</div>
+                        <div class="flex-2">Bundala</div>
+                        <div class="flex-2">Kibaha</div>
+                        <div class="flex-1">
+                            <button onclick="approveUser(1)" class="action_btn">
+                                Approve
+                            </button>
+                        </div>
+                    </div>
+
+                    </div>
+            </div>
+        </div>
+
+
     </main>
 </main>
 <footer class="footer">
