--- a/UI/index.html
+++ b/UI/index.html
@@ -576,6 +576,194 @@ income earners.
                 </div>
             </div>
         </div>
+        <div  class="card page hidden" data-path="/active_loans" data-handler="active_loans">
+            <div class="column justify-content-center">
+                <div class="row justify-content-center">
+                    <h4>Loans not fully paid</h4>
+                </div>
+
+                <div class="row justify-content-space-between list_row">
+                    <div class="flex-1"><h5>Id</h5></div>
+                    <div class="flex-1"><h5>Created</h5></div>
+                    <div class="flex-3"><h5>User</h5> </div>
+                    <div class="flex-1"><h5>Tenure(M)</h5></div>
+                    <div class="flex-2"><h5>Amount(USD)</h5></div>
+                    <div class="flex-1"><h5>Balance(USD)</h5></div>
+                    <div class="flex-1"><h5>Action</h5></div>
+                </div>
+                <div class="list">
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">4000</div>
+                        <div class="flex-1">
+                            <button onclick="payInFavor(1)" class="action_btn">
+                                pay in favor
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
     </main>
