feature(admin can see all loans fully paid ): complete

--- a/UI/index.html
+++ b/UI/index.html
@@ -764,6 +764,166 @@ income earners.
                 </div>
             </div>
         </div>
+        <div  class="card page hidden" data-path="/repayed_loans" data-handler="repayed_loans">
+            <div class="column justify-content-center">
+                <div class="row justify-content-center">
+                    <h4>Loans fully payed</h4>
+                </div>
+
+                <div class="row justify-content-space-between list_row">
+                    <div class="flex-1"><h5>Id</h5></div>
+                    <div class="flex-1"><h5>Created</h5></div>
+                    <div class="flex-3"><h5>User</h5> </div>
+                    <div class="flex-1"><h5>Tenure(M)</h5></div>
+                    <div class="flex-2"><h5>Amount(USD)</h5></div>
+                    <div class="flex-1"><h5>Interest(USD)</h5></div>
+                    <div class="flex-1"><h5>Repaid</h5></div>
+                </div>
+                <div class="list">
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1">1</div>
+                        <div class="flex-1">3/5/2019</div>
+                        <div class="flex-3">ebundala@gmail.com</div>
+                        <div class="flex-1">6</div>
+                        <div class="flex-2">6000</div>
+                        <div class="flex-1">600</div>
+                        <div class="flex-1">
+                            true
+                        </div>
+                    </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div> <div class="row justify-content-space-between list_row">
+                    <div class="flex-1">1</div>
+                    <div class="flex-1">3/5/2019</div>
+                    <div class="flex-3">ebundala@gmail.com</div>
+                    <div class="flex-1">6</div>
+                    <div class="flex-2">6000</div>
+                    <div class="flex-1">600</div>
+                    <div class="flex-1">
+                        true
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
 
 
     </main>
