--- a/UI/index.html
+++ b/UI/index.html
@@ -924,6 +924,22 @@ income earners.
                 </div>
             </div>
         </div>
+        <div  class="card page hidden" data-path="/repay_in_favor" data-handler="repay_in_favor">
+            <div class="row justify-content-space-around flex-1">
+                <div class="form">
+                    <form  action="#" id="repay_in_favor" name="repay_in_favor" class="card column justify-content-space-around flex-1">
+                        <div class="row justify-content-center"> <h3 >Repay Loan </h3></div>
+
+                        <div class="row justify-content-center">
+                            <div>Remained amount: </div><div>5000 USD</div>
+                        </div>
+                        <input type="number" min="1" step="0.50" required class="input" name="amount" placeholder="Amount in USD">
+
+                        <input type="submit" class="submit" name="repay" value="Pay">
+                    </form>
+                </div>
+            </div>
+        </div>
 
 
     </main>
