feature(admin can see specific loan detail page ): complete

--- a/UI/index.html
+++ b/UI/index.html
@@ -940,6 +940,35 @@ income earners.
                 </div>
             </div>
         </div>
+        <div  class="card page hidden" data-path="/loan_detail" data-handler="loan_detail">
+            <div class="row justify-content-space-around flex-1">
+                <div class="form card">
+                    <div class="row justify-content-space-around"> <h3>Loan Detail</h3></div>
+                    <div class="row" ><h5>ID:</h5>&nbsp;<h4>123</h4></div>
+                    <div class="row" ><h5>CreatedOn:</h5>&nbsp;<h4>1988/9/08</h4></div>
+                    <div class="row" ><h5>Email:</h5>&nbsp;<h4>ebundala@gmail.com</h4></div>
+                    <div class="row" ><h5>Tenor:</h5>&nbsp;<h4>6 (M)</h4></div>
+                    <div class="row" ><h5>Amount:</h5>&nbsp;<h4>567800.0 USD</h4></div>
+                    <div class="row" ><h5>Installment:</h5>&nbsp;<h4>500.0 (USD/M)</h4></div>
+                    <div class="row" ><h5>Interest:</h5>&nbsp;<h4>5000.0 (USD)</h4></div>
+                    <div class="row" ><h5>Status:</h5>&nbsp;<h4>Pending</h4></div>
+
+                    <div class="row justify-content-space-around" >
+
+                        <button class="action_btn_light">Reject</button>
+
+                        &nbsp;
+
+                            <button class="action_btn">
+                                Approve
+                            </button>
+
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
 
 
     </main>
