--- a/UI/index.html
+++ b/UI/index.html
@@ -77,7 +77,7 @@ income earners.
         </div>
 
 
-            <div  class="card page hidden" data-path="/404" data-handler="_404">
+        <div  class="card page hidden" data-path="/404" data-handler="_404">
                 <div class="row justify-content-space-around">
                     <h2 >404 NOT FOUND</h2>
                 </div>
@@ -105,7 +105,8 @@ income earners.
                         <input type="text" required class="input" name="lastName" placeholder="Last name">
                         <input type="text" required class="input" name="address" placeholder="Address">
                         <input type="email" required class="input" name="email" placeholder="Email">
-                        <input type="password" required class="input" name="password" placeholder="Password">
+                        <input type="password" minlength="6" required class="input" name="password" placeholder="Password">
+                        <input type="password" minlength="6" required class="input" name="passwordConfirm" placeholder="Confirm Password">
                         <input type="submit" class="submit" name="signup" value="SignUp">
                         <a href="#/login" class="footnote_link">I have an account?</a>
                     </form>
@@ -120,11 +121,12 @@ income earners.
                 <div class="form">
                     <form action="#" name="apply" class=" card column justify-content-space-around flex-1">
                         <div class="row justify-content-center"> <h3 >Apply for Loan</h3></div>
-                        <input type="number" min="1" step="0.5" required class="input" name="amount" placeholder="Amount in USD">
-                        <input type="number" min="1" step="1" max="12" required class="input" name="password" placeholder="Tenure in months">
-                        <div class="row justify-content-center">
+                        <div class="row justify-content-center flex-warp">
                             <div>Monthly repayment: </div><div>5000 USD</div>
                         </div>
+                        <input type="number" min="1" step="0.5" required class="input" name="amount" placeholder="Amount in USD">
+                        <input type="number" min="1" step="1" max="12" required class="input" name="password" placeholder="Tenure in months">
+
                         <input type="submit" class="submit" name="apply" value="Apply">
                     </form>
                 </div>
@@ -133,10 +135,10 @@ income earners.
         <div  class=" page hidden" data-path="/repay" data-handler="repay">
             <div class="row justify-content-space-around flex-1">
                 <div class="form">
-                    <form action="#" name="apply" class=" card column justify-content-space-around flex-1">
+                    <form action="#" name="repay" class=" card column justify-content-space-around flex-1">
                         <div class="row justify-content-center"> <h3 >Repay Loan</h3></div>
                         <div class="row justify-content-center">
-                            <div>Remained amount: </div><div>5000 USD</div>
+                            <div>You have Credit: </div><div>5000 USD</div>
                         </div>
                         <input type="number" min="1" step="0.50" required class="input" name="amount" placeholder="Amount in USD">
 
@@ -150,13 +152,14 @@ income earners.
                 <div class="row justify-content-center">
                     <h4>Repayment history</h4>
                 </div>
-                <div class="row justify-content-space-between list_row">
-                    <div class="flex-1"><h5>Id</h5></div>
-                    <div class="flex-2"><h5>Created</h5></div>
-                    <div class="flex-2"><h5>Monthly installment(USD)</h5></div>
-                    <div class="flex-2"><h5>Amount(USD)</h5></div>
-                </div>
+
                 <div class="list ">
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1"><h5>Id</h5></div>
+                        <div class="flex-2"><h5>Created</h5></div>
+                        <div class="flex-2"><h5>Monthly installment(USD)</h5></div>
+                        <div class="flex-2"><h5>Amount(USD)</h5></div>
+                    </div>
                     <div class="row justify-content-space-between list_row">
                         <div class="flex-1">1</div>
                         <div class="flex-2">1/4/1990</div>
@@ -237,15 +240,16 @@ income earners.
                 <div class="row justify-content-center">
                     <h4>Users</h4>
                 </div>
-                <div class="row justify-content-space-between list_row">
-                    <div class="flex-1"><h5>Id</h5></div>
-                    <div class="flex-2"><h5>Email</h5></div>
-                    <div class="flex-2"><h5>Firstname</h5></div>
-                    <div class="flex-2"><h5>Lastname</h5></div>
-                    <div class="flex-2"><h5>Address</h5></div>
-                    <div class="flex-1"><h5>Action</h5></div>
-                </div>
+
                 <div class="list ">
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1"><h5>Id</h5></div>
+                        <div class="flex-2"><h5>Email</h5></div>
+                        <div class="flex-2"><h5>Firstname</h5></div>
+                        <div class="flex-2"><h5>Lastname</h5></div>
+                        <div class="flex-2"><h5>Address</h5></div>
+                        <div class="flex-1"><h5>Action</h5></div>
+                    </div>
                     <div class="row justify-content-space-between list_row">
                         <div class="flex-1">1</div>
                         <div class="flex-2">ebundala@gmail.com</div>
@@ -368,17 +372,18 @@ income earners.
                     <h4>Loans Applications</h4>
                 </div>
 
-                <div class="row justify-content-space-between list_row">
-                    <div class="flex-1"><h5>Id</h5></div>
-                    <div class="flex-1"><h5>Created</h5></div>
-                    <div class="flex-3"><h5>User</h5> </div>
-                    <div class="flex-1"><h5>Repaid</h5></div>
-                    <div class="flex-1"><h5>Tenure(M)</h5></div>
-                    <div class="flex-2"><h5>Amount(USD)</h5></div>
-                    <div class="flex-1"><h5>Status</h5></div>
-                    <div class="flex-1"><h5>Action</h5></div>
-                </div>
+
                 <div class="list">
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1"><h5>Id</h5></div>
+                        <div class="flex-1"><h5>Created</h5></div>
+                        <div class="flex-3"><h5>User</h5> </div>
+                        <div class="flex-1"><h5>Repaid</h5></div>
+                        <div class="flex-1"><h5>Tenure(M)</h5></div>
+                        <div class="flex-2"><h5>Amount(USD)</h5></div>
+                        <div class="flex-1"><h5>Status</h5></div>
+                        <div class="flex-1"><h5>Action</h5></div>
+                    </div>
                     <div class="row justify-content-space-between list_row">
                         <div class="flex-1">1</div>
                         <div class="flex-1">3/5/2019</div>
@@ -582,16 +587,17 @@ income earners.
                     <h4>Loans not fully paid</h4>
                 </div>
 
-                <div class="row justify-content-space-between list_row">
-                    <div class="flex-1"><h5>Id</h5></div>
-                    <div class="flex-1"><h5>Created</h5></div>
-                    <div class="flex-3"><h5>User</h5> </div>
-                    <div class="flex-1"><h5>Tenure(M)</h5></div>
-                    <div class="flex-2"><h5>Amount(USD)</h5></div>
-                    <div class="flex-1"><h5>Balance(USD)</h5></div>
-                    <div class="flex-1"><h5>Action</h5></div>
-                </div>
+
                 <div class="list">
+                    <div class="row justify-content-space-between list_row">
+                        <div class="flex-1"><h5>Id</h5></div>
+                        <div class="flex-1"><h5>Created</h5></div>
+                        <div class="flex-3"><h5>User</h5> </div>
+                        <div class="flex-1"><h5>Tenure(M)</h5></div>
+                        <div class="flex-2"><h5>Amount(USD)</h5></div>
+                        <div class="flex-1"><h5>Balance(USD)</h5></div>
+                        <div class="flex-1"><h5>Action</h5></div>
+                    </div>
                     <div class="row justify-content-space-between list_row">
                         <div class="flex-1">1</div>
                         <div class="flex-1">3/5/2019</div>
@@ -931,7 +937,7 @@ income earners.
                         <div class="row justify-content-center"> <h3 >Repay Loan </h3></div>
 
                         <div class="row justify-content-center">
-                            <div>Remained amount: </div><div>5000 USD</div>
+                            <div>Credit: </div><div>5000 USD</div>
                         </div>
                         <input type="number" min="1" step="0.50" required class="input" name="amount" placeholder="Amount in USD">
 
@@ -941,19 +947,32 @@ income earners.
             </div>
         </div>
         <div  class="card page hidden" data-path="/loan_detail" data-handler="loan_detail">
-            <div class="row justify-content-space-around flex-1">
-                <div class="form card">
-                    <div class="row justify-content-space-around"> <h3>Loan Detail</h3></div>
-                    <div class="row" ><h5>ID:</h5>&nbsp;<h4>123</h4></div>
-                    <div class="row" ><h5>CreatedOn:</h5>&nbsp;<h4>1988/9/08</h4></div>
-                    <div class="row" ><h5>Email:</h5>&nbsp;<h4>ebundala@gmail.com</h4></div>
-                    <div class="row" ><h5>Tenor:</h5>&nbsp;<h4>6 (M)</h4></div>
-                    <div class="row" ><h5>Amount:</h5>&nbsp;<h4>567800.0 USD</h4></div>
-                    <div class="row" ><h5>Installment:</h5>&nbsp;<h4>500.0 (USD/M)</h4></div>
-                    <div class="row" ><h5>Interest:</h5>&nbsp;<h4>5000.0 (USD)</h4></div>
-                    <div class="row" ><h5>Status:</h5>&nbsp;<h4>Pending</h4></div>
 
-                    <div class="row justify-content-space-around" >
+                <div class="card">
+                    <div class="column justify-content-center">
+                    <div class="row justify-content-space-around">
+                         <h3>Loan Application #id</h3>
+                    </div>
+                    <div class="row justify-content-start hide_on_small_xs padding"> <h4 class="flex-2 ">Details</h4><h4 class="flex-1 ">Financials</h4></div>
+                       <div class="row align-items-start flex-warp">
+                        <div class="column justify-content-start flex-1 padding" >
+                            <div class="row justify-content-space-between" ><span class="field_name">ID:</span>&nbsp;<span class="value">123</span></div>
+                            <div class="row justify-content-space-between" ><span class="field_name">CreatedOn:</span>&nbsp;<span class="value">1988/9/08</span></div>
+                            <div class="row justify-content-space-between" ><span class="field_name">Email:</span>&nbsp;<span class="value">ebundala@gmail.com</span></div>
+
+
+                        </div>
+
+                        <div class="column justify-content-start flex-1 padding">
+                    <div class="row justify-content-space-between" ><span class="field_name">Tenor:</span>&nbsp;<span class="value">6 (M)</span></div>
+                    <div class="row justify-content-space-between" ><span class="field_name">Amount:</span>&nbsp;<span class="value">567800.0 USD</span></div>
+                    <div class="row justify-content-space-between" ><span class="field_name">Installment:</span>&nbsp;<span class="value">500.0 (USD/M)</span></div>
+                    <div class="row justify-content-space-between" ><span class="field_name">Interest:</span>&nbsp;<span class="value">5000.0 (USD)</span></div>
+                    <div class="row justify-content-space-between" ><span class="field_name">Status:</span>&nbsp;<span class="value">Pending</span></div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-space-between" >
+                        <div class="flex-1"></div>
 
                         <button class="action_btn_light">Reject</button>
 
@@ -965,9 +984,9 @@ income earners.
 
                     </div>
 
-
+                    </div>
                 </div>
-            </div>
+
         </div>
 
 
