--- a/UI/index.html
+++ b/UI/index.html
@@ -950,8 +950,8 @@ income earners.
 
                 <div class="card">
                     <div class="column justify-content-center">
-                    <div class="row justify-content-space-around">
-                         <h3>Loan Application #id</h3>
+                    <div class="row justify-content-space-between">
+                         <h3 class="flex-1">Loan Application #id</h3><img onclick="goback()" src="assets/icons/baseline-close-24px.svg" class="close"/>
                     </div>
                     <div class="row justify-content-start hide_on_small_xs padding"> <h4 class="flex-2 ">Details</h4><h4 class="flex-1 ">Financials</h4></div>
                        <div class="row align-items-start flex-warp">
