feature(ui login signup ):complete

--- a/UI/index.html
+++ b/UI/index.html
@@ -88,6 +88,7 @@ income earners.
                 <div class="form">
                     <form id="login_form" method="post" action="#/login" name="login" class=" card column justify-content-space-around flex-1">
                         <div class="row justify-content-center"> <h3 >Login</h3></div>
+                        <div class="row justify-content-space-around"><span class="form-error"></span></div>
                         <input type="email" required class="input" name="email" placeholder="Email">
                         <input type="password" required class="input" name="password" placeholder="Password">
                         <input type="submit" class="submit" name="login" value="Login">
@@ -101,6 +102,7 @@ income earners.
                 <div class="form">
                     <form id="signup_form" method="post" action="#/signup" name="signup" class=" card column justify-content-space-around flex-1">
                         <div class="row justify-content-center"> <h3 >Sign up</h3></div>
+                        <div class="row justify-content-space-around"><span class="form-error"></span></div>
                         <input type="text" required class="input" name="firstName" placeholder="First name">
                         <input type="text" required class="input" name="lastName" placeholder="Last name">
                         <input type="text" required class="input" name="address" placeholder="Address">
